2001-05-26  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm: Do percent expansion on SourceDirectory and
	Source#ExtractDir.

2001-05-24  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm (cmd_scanpackages): Generate and use an override
	file.

	* PkgVersion.pm (phase_build): Added conffiles handling.

2001-05-23  Christoph Pfisterer  <cp@chrisp.de>

	* Engine.pm: New command 'scanpackages' to generate Packages.gz
	files using dpkg-scanpackages.

	* PkgVersion.pm (phase_build): Apply percent expansions to package
	scripts.
	(match_package): Be more quiet if verbose output is not set.

2001-05-18  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_build): Added support for package scripts.

	* Services.pm (read_config): Removed dead code.
	(read_properties): Added here-document support.

	* Engine.pm (real_install): Fixed the don't-fetch-unless-needed
	check.

2001-05-11  Finlay Dobbie  <finlay.dobbie@btinternet.com>

	* PkgVersion.pm: get_description() implemented, for use in fink
	description <package>
	* Engine.pm: fink description implemented

2001-05-11  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (initialize): Dependencies must be separated by a
	comma now; a space is no longer sufficient. (Result of merging
	dpkg-branch and HEAD.)
	* Engine.pm (real_install): Added code to add all essential
	packages to the dependency list of non-essential packages. (Result
	of merging dpkg-branch and HEAD.)

2001-05-08  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (find_debfile): Also search <prefix>/fink/debs for
	.deb files.

	* Engine.pm (real_install): Only fetch when we need the tarballs
	later.

2001-05-04  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_activate): Detect dpkg malfunction
	(incomplete extraction) and offer to retry.

2001-05-02  Christoph Pfisterer  <cp@chrisp.de>

	* Base.pm (param_default): Fixed default handling.

2001-04-28  Christoph Pfisterer  <cp@chrisp.de>
